--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,7 @@
 @()
 
 @main("HTWG Schach") {
+    <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/chess.css")' />
 
     <h1>About Chess</h1>
 
