initial push Bootstrap.

--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -2,6 +2,7 @@
 @(controller:de.htwg.se.ChinaSchach.controller.controllerComponent.ControllerInterface)
 
 <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/chess.css")' />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 @piece(i: Int, j: Int) = @{
     controller.getPiece(Point(i, j)) match {
@@ -24,32 +25,51 @@
 
 
 @main("HTWG Schach") {
-    <div class="chessboard">
-        @for(row <- 0 until 8) {
-            @for(col <- 0 until 8) {
-                @if(row % 2 == 0){
-                    @if(col % 2 == 0){
-                        <div class= "@{"black"}">
-                            @piece(col, row)
-                        </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">HTWG Schach</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/schach">Play Chess</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
+        <div class="chessboard">
+            @for(row <- 0 until 8) {
+                @for(col <- 0 until 8) {
+                    @if(row % 2 == 0){
+                        @if(col % 2 == 0){
+                            <div class= "@{"black"}">
+                                @piece(col, row)
+                            </div>
+                        }else{
+                            <div class= "@{"white"}">
+                                @piece(col, row)
+                            </div>
+                        }
                     }else{
-                        <div class= "@{"white"}">
-                            @piece(col, row)
-                        </div>
-                    }
-                }else{
-                    @if(col % 2 == 0){
-                        <div class= "@{"white"}">
-                            @piece(col, row)
-                        </div>
-                    }else{
-                        <div class= "@{"black"}">
-                            @piece(col, row)
-                        </div>
+                        @if(col % 2 == 0){
+                            <div class= "@{"white"}">
+                                @piece(col, row)
+                            </div>
+                        }else{
+                            <div class= "@{"black"}">
+                                @piece(col, row)
+                            </div>
+                        }
                     }
                 }
+                <div class="clear"></div>
             }
-            <div class="clear"></div>
-        }
-    </div>
+
+        </div>
+        <a href="/" class="btn btn-primary">Back to index</a>
+
 }
