--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,6 +5,9 @@
     @*<script src='@routes.Assets.versioned("javascripts/bootstrap.min.js")'> </script>*@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">HTWG Schach</a>
@@ -20,6 +23,7 @@
             </ul>
         </div>
     </nav>
+
     <div class="card">
         <h1>About Chess</h1>
         <div class="card-body">
@@ -42,77 +46,133 @@
                 a player wins the game if the opponent resigns, or (in a timed game) runs out of time. There are also
                 several ways that a game can end in a draw.
             </p>
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="card">
-                        <div class="card-body">
-                            <p class="card-text">
-                                Image of this chessgame <br>
-                                <img src=@routes.Assets.versioned("images/chessCSS.png") class="img-fluid">
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <a href="/schach" class="btn btn-primary">Play Chess <br></a>
-            <a href="/#" class="btn btn-primary">Back to the top</a>
         </div>
     </div>
-
     <div class="card">
         <h1>Rules</h1>
         <div class="card-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h3>How to Move the King</h3>
-                        <p>
-                            The king is the most important piece, but is one of the weakest. The king can only move one square in any
-                            direction - up, down, to the sides, and diagonally. The king may never move himself into check (where he
-                            could be captured). When the king is attacked by another piece this is called "check".
-                        </p>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="container">
+                        <div class="card">
+                            <div class="card-body">
+                                <p class="card-text">
+                                    Image of this chessgame <br>
+                                    <img src=@routes.Assets.versioned("images/chessCSS.png") class="img-fluid">
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col">
-                        <h3>How to Move the Queen</h3>
-                        <p>
-                            The queen is the most powerful piece. She can move in any one straight direction - forward, backward,
-                            sideways, or diagonally - as far as possible as long as she does not move through any of her own pieces.
-                            And, like with all pieces, if the queen captures an opponent's piece her move is over. Notice how the
-                            white queen captures the black queen and then the black king is forced to move.
-                        </p>
-                    </div>
-                    <div class="col">
-                        <h3>How to Move the Rook</h3>
-                        <p>
-                            The rook may move as far as it wants, but only forward, backward, and to the sides. The rooks are
-                            particularly powerful pieces when they are protecting each other and working together!
-                        </p>
-                    </div>
-                        <div class="col">
-                        <h3>How to Move the Bishop</h3>
-                        <p>
-                            The bishop may move as far as it wants, but only diagonally. Each bishop starts on one color
-                            (light or dark) and must always stay on that color. Bishops work well together because they cover
-                            up each other's weaknesses.
-                        </p>
-                    </div>
-                    <div class="col">
-                        <h3>How to Move the Knight</h3>
-                        <p>
-                            Knights move in a very different way from the other pieces – going two squares in one direction,
-                            and then one more move at a 90 degree angle, just like the shape of an “L”. Knights are also the
-                            only pieces that can move over other pieces.
-                        </p>
-                    </div>
-                    <div class="col">
-                        <h3>How to Move the Pawn</h3>
-                        <p>
-                            Pawns are unusual because they move and capture in different ways: they move forward, but capture
-                            diagonally. Pawns can only move forward one square at a time, except for their very first move where
-                            they can move forward two squares. Pawns can only capture one square diagonally in front of them.
-                            They can never move or capture backwards. If there is another piece directly in front of a pawn he
-                            cannot move past or capture that piece.
-                        </p>
+                </div>
+                <div class="col-sm-6">
+                    <div class="container">
+                        <div class="accordion" id="accordionExample">
+                            <div class="card z-depth-0 bordered">
+                                <div class="card-header" id="headingOne">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                                        aria-expanded="true" aria-controls="collapseOne">
+                                            How to Move the King
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                                data-parent="#accordionExample">
+                                    <div class="card-body">
+                                        The king is the most important piece, but is one of the weakest. The king can only move one square in any
+                                        direction - up, down, to the sides, and diagonally. The king may never move himself into check (where he
+                                        could be captured). When the king is attacked by another piece this is called "check".
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card z-depth-0 bordered">
+                                <div class="card-header" id="headingTwo">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                        data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                            How to Move the Queen
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                    <div class="card-body">
+                                        The queen is the most powerful piece. She can move in any one straight direction - forward, backward,
+                                        sideways, or diagonally - as far as possible as long as she does not move through any of her own pieces.
+                                        And, like with all pieces, if the queen captures an opponent's piece her move is over. Notice how the
+                                        white queen captures the black queen and then the black king is forced to move.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card z-depth-0 bordered">
+                                <div class="card-header" id="headingThree">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                        data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                            How to Move the Rook
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                                    <div class="card-body">
+                                        The rook may move as far as it wants, but only forward, backward, and to the sides. The rooks are
+                                        particularly powerful pieces when they are protecting each other and working together!
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card z-depth-0 bordered">
+                                <div class="card-header" id="headingFour">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                        data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                            How to Move the Bishop
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+                                    <div class="card-body">
+                                        The bishop may move as far as it wants, but only diagonally. Each bishop starts on one color
+                                        (light or dark) and must always stay on that color. Bishops work well together because they cover
+                                        up each other's weaknesses.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card z-depth-0 bordered">
+                                <div class="card-header" id="headingFive">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                        data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                            How to Move the Knight
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+                                    <div class="card-body">
+                                        Knights move in a very different way from the other pieces – going two squares in one direction,
+                                        and then one more move at a 90 degree angle, just like the shape of an “L”. Knights are also the
+                                        only pieces that can move over other pieces.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card z-depth-0 bordered">
+                                <div class="card-header" id="headingSix">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                        data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                            How to Move the Pawn
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
+                                    <div class="card-body">
+                                        Pawns are unusual because they move and capture in different ways: they move forward, but capture
+                                        diagonally. Pawns can only move forward one square at a time, except for their very first move where
+                                        they can move forward two squares. Pawns can only capture one square diagonally in front of them.
+                                        They can never move or capture backwards. If there is another piece directly in front of a pawn he
+                                        cannot move past or capture that piece.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -120,6 +180,7 @@
             <a href="/#" class="btn btn-primary">Back to the top</a>
         </div>
     </div>
+
 
 
 }
