--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -47,7 +47,9 @@
 
         <div class="chessboard">
             @for(row <- 0 until 8) {
+                <div class="row">
                 @for(col <- 0 until 8) {
+                    <div class="col">
                     @if(row % 2 == 0){
                         @if(col % 2 == 0){
                             <div class= "@{"black"}">
@@ -69,8 +71,11 @@
                             </div>
                         }
                     }
+                    </div>
                 }
+
                 <div class="clear"></div>
+                </div>
             }
         </div>
         <a href="/" class="btn btn-primary">Back to index</a>
