--- a/public/stylesheets/chess.css
+++ b/public/stylesheets/chess.css
@@ -38,9 +38,9 @@ p {
 }
 
 .chessboard {
-    width: 75%;
-    height: 100%;
-    display: inline-flex;
+    width: 9.6em;
+    height: 9.6em;
+    display: flex;
     margin: 0em;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
@@ -52,7 +52,7 @@ p {
     width: 1.2em;
     height: 1.2em;
     background-color: #999;
-    font-size:50px;
+    font-size:40px;
     text-align:center;
     vertical-align:middle;
 }
@@ -62,7 +62,7 @@ p {
     width: 1.2em;
     height: 1.2em;
     background-color: #fff;
-    font-size:50px;
+    font-size:40px;
     text-align:center;
     vertical-align:middle;
 }
