--- a/public/stylesheets/chess.css
+++ b/public/stylesheets/chess.css
@@ -37,20 +37,34 @@ p {
     border-width: 0.5em;
 }
 
-.chessboard {
-    width: 9.6em;
-    height: 9.6em;
-    display: flex;
-    margin: 0em;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    border: 25px solid #333;
+@media (min-width: 1000px) {
+    .chessboard {
+        /*border-style: inset;
+        border-width: 0.5em;*/
+        width: 12em;
+        height: 12em;
+        display: inline-flex;
+        margin: 0em;
+        margin-top: 0.5em;
+        margin-bottom: 0.5em;
+        padding: 0.5em
+        /*border: 14em solid #333;*/
+    }
 }
+
+
+.cell {
+    display: inline-block;
+    width: 1.2em;
+    height: 1.2em;
+    margin:0.1em;
+}
+
 .black {
     display: inline-block;
     float: left;
-    width: 1.2em;
-    height: 1.2em;
+    width: 1.5em;
+    height: 1.5em;
     background-color: #999;
     font-size:40px;
     text-align:center;
@@ -59,8 +73,8 @@ p {
 .white {
     display: inline-block;
     float: left;
-    width: 1.2em;
-    height: 1.2em;
+    width: 1.5em;
+    height: 1.5em;
     background-color: #fff;
     font-size:40px;
     text-align:center;
