--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -46,12 +46,13 @@
             </ul>
         </div>
     </nav>
-        <div class="chessboard">
 
+    <div class="pagecontainer">
+        <div class="chessboard">
         @for(row <- 0 until 8) {
-            <div class="row">
+            <div class="cell">
                 @for(col <- 0 until 8) {
-                    <div class="col">
+                    <div class="cell">
                     @if(row % 2 == 0){
                         @if(col % 2 == 0){
                             <div class="@{"black"}">
@@ -75,9 +76,9 @@
                     }
                     </div>
                 }
-
             <div class="clear"></div>
             </div>
         }
         </div>
+    </div>
 }
