--- a/public/stylesheets/chess.css
+++ b/public/stylesheets/chess.css
@@ -27,8 +27,9 @@ p {
 }
 
 .pagecontainer {
-    width: 100%;
-    height: 100%;
+    float: left;
+    width: 12.5em;
+    height: 12.5em;
     margin: auto;
     margin-top: auto;
     /*border-style: solid;*/
@@ -39,14 +40,23 @@ p {
     border-style: inset;
     border-width: 0.5em;
     width: auto;
-    height: auto;
+}
+
+.boardcontainer {
+    border-style: inherit;
+    border-width: 13em;
+    border-height: 13em;
+    float: left;
+    padding: 0.5em;
+    height: 13em;
+    width: 13em;
 }
 
 .chessboard {
     /*border-style: inset;
     border-width: 0.5em;*/
-    width: 12em;
-    height: 12em;
+    width: 100%;
+    height: 100%;
     display: inline-flex;
     margin: 0.5em;
     margin-top: 0.5em;
