--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,6 +18,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
+                    <a class="nav-link" href="/schach">Home</a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="/schach">Play Chess</a>
                 </li>
             </ul>
