new Chessboard image

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -60,7 +60,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <p class="card-text">
-                                    Image of this chessgame <br>
+                                    Chessboard preview<br>
                                     <img src=@routes.Assets.versioned("images/chessCSS.png") class="img-fluid">
                                 </p>
                             </div>
