edited About Page

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -75,17 +75,15 @@
                                         Rules<br>
                                     </h3>
                                     <div class="accordion" id="accordionExample">
-                                        <div class="card z-depth-0 bordered">
-                                            <div class="card-header" id="headingOne">
-                                                <h5 class="mb-0">
-                                                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                                                    aria-expanded="true" aria-controls="collapseOne">
-                                                        How to Move the King
+                                        <div class="card">
+                                            <div class="card-header p-0" id="headingOne">
+                                                <h2 class="mb-0">
+                                                    <button class="btn p-0 btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                        <span class="icon">&#9818;</span>How to Move the King
                                                     </button>
-                                                </h5>
+                                                </h2>
                                             </div>
-                                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-                                            data-parent="#accordionExample">
+                                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                                 <div class="card-body">
                                                     The king is the most important piece, but is one of the weakest. The king can only move one square in any
                                                     direction - up, down, to the sides, and diagonally. The king may never move himself into check (where he
@@ -93,14 +91,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="card z-depth-0 bordered">
-                                            <div class="card-header" id="headingTwo">
-                                                <h5 class="mb-0">
-                                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                                    data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                        How to Move the Queen
+                                        <div class="card">
+                                            <div class="card-header p-0" id="headingTwo">
+                                                <h2 class="mb-0">
+                                                    <button class="btn p-0 btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                        <span class="icon">&#9819;</span>How to Move the Queen
                                                     </button>
-                                                </h5>
+                                                </h2>
                                             </div>
                                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                                 <div class="card-body">
@@ -111,14 +108,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="card z-depth-0 bordered">
-                                            <div class="card-header" id="headingThree">
-                                                <h5 class="mb-0">
-                                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                                    data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                        How to Move the Rook
+                                        <div class="card">
+                                            <div class="card-header p-0" id="headingThree">
+                                                <h2 class="mb-0">
+                                                    <button class="btn p-0 btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                        <span class="icon">&#9820;</span>How to Move the Rook
                                                     </button>
-                                                </h5>
+                                                </h2>
                                             </div>
                                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                                 <div class="card-body">
@@ -127,14 +123,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="card z-depth-0 bordered">
-                                            <div class="card-header" id="headingFour">
-                                                <h5 class="mb-0">
-                                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                                    data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                                                        How to Move the Bishop
+                                        <div class="card">
+                                            <div class="card-header p-0" id="headingFour">
+                                                <h2 class="mb-0">
+                                                    <button class="btn p-0 btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                                                        <span class="icon">&#9821</span>How to Move the Bishop
                                                     </button>
-                                                </h5>
+                                                </h2>
                                             </div>
                                             <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
                                                 <div class="card-body">
@@ -144,14 +139,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="card z-depth-0 bordered">
-                                            <div class="card-header" id="headingFive">
-                                                <h5 class="mb-0">
-                                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                                    data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                                                        How to Move the Knight
+                                        <div class="card">
+                                            <div class="card-header p-0" id="headingFive">
+                                                <h2 class="mb-0">
+                                                    <button class="btn p-0 btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+                                                        <span class="icon">&#9822;</span>How to Move the Knight
                                                     </button>
-                                                </h5>
+                                                </h2>
                                             </div>
                                             <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
                                                 <div class="card-body">
@@ -161,14 +155,13 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="card z-depth-0 bordered">
-                                            <div class="card-header" id="headingSix">
-                                                <h5 class="mb-0">
-                                                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                                                    data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                                                        How to Move the Pawn
+                                        <div class="card">
+                                            <div class="card-header p-0" id="headingSix">
+                                                <h2 class="mb-0">
+                                                    <button class="btn p-0 btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
+                                                        <span class="icon">&#9823;</span>How to Move the Pawn
                                                     </button>
-                                                </h5>
+                                                </h2>
                                             </div>
                                             <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
                                                 <div class="card-body">
