small fix to back to the top

--- a/public/stylesheets/chess.css
+++ b/public/stylesheets/chess.css
@@ -11,7 +11,7 @@ h1 {
 
 }h3 {
      color: black;
-     text-align: center;
+     text-align: left;
      font-family: impact;
      font-size: 30px;
  }
