--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -182,7 +182,7 @@
                 </div>
                 <div class="buttoncontainer">
                     <a href="/schach" class="btn btn-primary">Play Chess<br></a>
-                    <a href="/" class="btn btn-primary">Back to the top</a>
+                    <a href="#" class="btn btn-primary">Back to the top</a>
                 </div>
             </div>
         </div>
