--- a/public/stylesheets/chess.css
+++ b/public/stylesheets/chess.css
@@ -30,27 +30,31 @@ p {
 }
 
 .chessboard {
-    width:690px;
-    height: 690px;
-    margin: 20px;
-    border: 25px solid #333;
+    width:40vw;
+    height: 40vw;
+    margin: auto;
+    border: 1vw solid #333;
 }
 .black {
     float: left;
-    width: 80px;
-    height: 80px;
+    width: 12.5%;
+    height: 12.5%;
+    max-height: 100vw;
+    max-width: 100vw;
     background-color: #999;
-    font-size:50px;
+    font-size: 4vw;
     text-align:center;
     display: table-cell;
     vertical-align:middle;
 }
 .white {
     float: left;
-    width: 80px;
-    height: 80px;
+    width: 12.5%;
+    height: 12.5%;
+    max-height: 100vw;
+    max-width: 100vw;
     background-color: #fff;
-    font-size:50px;
+    font-size: 4vw;
     text-align:center;
     display: table-cell;
     vertical-align:middle;
