--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -3,6 +3,8 @@
 
 <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/chess.css")' />
 
+@toCoord(col: Int, row: Int)= @{ col +  row }
+
 @piece(i: Int, j: Int) = @{
     controller.getPiece(Point(i, j)) match {
         case "Rook(b)" => <span>&#9820;</span>
@@ -42,27 +44,27 @@
         </div>
     </nav>
 
-    <script src="javascripts/chess.js"></script>
+    @*<script src="javascripts/chess.js"></script>*@
     <div class="chessboard">
     @for(row <- 0 until 8) {
         @for(col <- 0 until 8) {
             @if(row % 2 == 0){
                 @if(col % 2 == 0){
-                    <div style="cursor:pointer" onclick="clickFct(elmnt)" class="@{"black"}">
+                    <div id="@col@row" class="@{"black"}">
                         @piece(col, row)
                     </div>
                 }else{
-                    <div style="cursor:pointer" onclick="clickFct(elmnt)" class="@{"white"}">
+                    <div id="@col@row" class="@{"white"}">
                         @piece(col, row)
                     </div>
                 }
             }else{
                 @if(col % 2 == 0){
-                    <div style="cursor:pointer" onclick="clickFct(elmnt)" class="@{"white"}">
+                    <div id="@col@row" class="@{"white"}">
                         @piece(col, row)
                     </div>
                 }else{
-                    <div style="cursor:pointer" onclick="clickFct(elmnt)" class="@{"black"}">
+                    <div id="@col@row" class="@{"black"}">
                         @piece(col, row)
                     </div>
                 }
