--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -28,27 +28,8 @@
     <div class="chessboard">
     @for(row <- 0 until 8) {
         @for(col <- 0 until 8) {
-            @if(row % 2 == 0){
-                @if(col % 2 == 0){
-                    <div id="@col@row" class="@{"black"}">
-                        @piece(col, row)
+            <div id="@col@row">
                     </div>
-                }else{
-                    <div id="@col@row" class="@{"white"}">
-                        @piece(col, row)
-                    </div>
-                }
-            }else{
-                @if(col % 2 == 0){
-                    <div id="@col@row" class="@{"white"}">
-                        @piece(col, row)
-                    </div>
-                }else{
-                    <div id="@col@row" class="@{"black"}">
-                        @piece(col, row)
-                    </div>
-                }
-            }
         }
         <div class="clear"></div>
     }
