--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -1,12 +1,15 @@
 @import de.htwg.se.ChinaSchach.util.Point
 @(controller:de.htwg.se.ChinaSchach.controller.controllerComponent.ControllerInterface)
 
-<link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/chess.css")' />
-
 @piece(i: Int, j: Int) = @{""}
 
 
 @main("HTWG Schach") {
+
+    <script src="@routes.Assets.versioned("javascripts/vue.js")" ></script>
+    <script src="@routes.Assets.versioned("javascripts/chessVue.js")" ></script>
+    <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/chess.css")' />
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">HTWG Schach</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
