--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -28,6 +28,14 @@
         </div>
     </nav>
 
+    <div id="chess-game" class="pagecontainer">
+        <chess-field></chess-field>
+        <div class="alert alert-primary" role="alert">
+        @message
+        </div>
+
+    </div>
+
     <div class="chessboard">
     @for(row <- 0 until 8) {
         @for(col <- 0 until 8) {
