--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -28,13 +28,9 @@
         </div>
     </nav>
 
-    <div id="chess-game" class="pagecontainer">
+@*    <div id="chess-game" class="pagecontainer">
         <chess-field></chess-field>
-        <div class="alert alert-primary" role="alert">
-        @message
-        </div>
-
-    </div>
+    </div>*@
 
     <div class="chessboard">
     @for(row <- 0 until 8) {
