work on Polymer-element

--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -41,6 +41,9 @@
         <div class="clear"></div>
     }
     </div>
+
+    <casualties-bar pieces="@controller.getKillsPlayer1"></casualties-bar>
+
     <div class="buttoncontainer">
         <a href="/restart" class="btn btn-primary">Restart<br></a>
     </div>
