--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -19,7 +19,7 @@
         <!-- Bootstrap CSS on CDN server, set contentSecurityPolicy in application.conf to allow these URLs-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="@routes.Assets.versioned("javascripts/chess.js")" ></script>
+@*        <script src="@routes.Assets.versioned("javascripts/chess.js")" ></script>*@
 
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
 
