--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -8,6 +8,7 @@
 
     <script src="@routes.Assets.versioned("javascripts/vue.js")" ></script>
     <script src="@routes.Assets.versioned("javascripts/chessVue.js")" ></script>
+    <script src="@routes.Assets.versioned("polymer-3-first-element/icon-toggle-finished/icon-toggle.js")"></script>
     <link rel="stylesheet" href='@routes.Assets.versioned("stylesheets/chess.css")' />
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -42,10 +43,10 @@
     }
     </div>
 
-    <casualties-bar pieces="@controller.getKillsPlayer1"></casualties-bar>
-
     <div class="buttoncontainer">
         <a href="/restart" class="btn btn-primary">Restart<br></a>
     </div>
+
+    <casualties-bar></casualties-bar>
 
 }
