--- a/app/views/schach.scala.html
+++ b/app/views/schach.scala.html
@@ -25,6 +25,14 @@
         </div>
     </nav>
 
+
+
+    @*<div id="chess-game" class="pagecontainer">
+        <chess-field></chess-field>
+
+    </div>*@
+
+
     <div class="chessboard">
     @for(row <- 0 until 8) {
         @for(col <- 0 until 8) {
