VUE works but the board doesn t fill correctly

--- a/app/views/chessVue.scala.html
+++ b/app/views/chessVue.scala.html
@@ -32,7 +32,7 @@
     <div id="chess-app"></div>
 
     <script>
-    var app = new Vue({
+    let app = new Vue({
     el: '#chess-app',
     render: function(html) {
     return html(ChessApp.default, {});
